--- a/notebooks/01_Data_Understanding.ipynb
+++ b/notebooks/01_Data_Understanding.ipynb
@@ -35,269 +35,69 @@
    "id": "518f00b7",
    "metadata": {},
    "source": [
-    "## 2. Data Loading and Understanding"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "fa789d83",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>RowNumber</th>\n",
-       "      <th>CustomerId</th>\n",
-       "      <th>Surname</th>\n",
-       "      <th>CreditScore</th>\n",
-       "      <th>Geography</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Tenure</th>\n",
-       "      <th>Balance</th>\n",
-       "      <th>NumOfProducts</th>\n",
-       "      <th>HasCrCard</th>\n",
-       "      <th>IsActiveMember</th>\n",
-       "      <th>EstimatedSalary</th>\n",
-       "      <th>Exited</th>\n",
-       "      <th>Complain</th>\n",
-       "      <th>Satisfaction Score</th>\n",
-       "      <th>Card Type</th>\n",
-       "      <th>Point Earned</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>15634602</td>\n",
-       "      <td>Hargrave</td>\n",
-       "      <td>619</td>\n",
-       "      <td>France</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>42</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>101348.88</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>DIAMOND</td>\n",
-       "      <td>464</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>15647311</td>\n",
-       "      <td>Hill</td>\n",
-       "      <td>608</td>\n",
-       "      <td>Spain</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>41</td>\n",
-       "      <td>1</td>\n",
-       "      <td>83807.86</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>112542.58</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>DIAMOND</td>\n",
-       "      <td>456</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>15619304</td>\n",
-       "      <td>Onio</td>\n",
-       "      <td>502</td>\n",
-       "      <td>France</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>42</td>\n",
-       "      <td>8</td>\n",
-       "      <td>159660.80</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>113931.57</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>DIAMOND</td>\n",
-       "      <td>377</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>15701354</td>\n",
-       "      <td>Boni</td>\n",
-       "      <td>699</td>\n",
-       "      <td>France</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>39</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>93826.63</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>GOLD</td>\n",
-       "      <td>350</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>15737888</td>\n",
-       "      <td>Mitchell</td>\n",
-       "      <td>850</td>\n",
-       "      <td>Spain</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>43</td>\n",
-       "      <td>2</td>\n",
-       "      <td>125510.82</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>79084.10</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>GOLD</td>\n",
-       "      <td>425</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   RowNumber  CustomerId   Surname  CreditScore Geography  Gender  Age  \\\n",
-       "0          1    15634602  Hargrave          619    France  Female   42   \n",
-       "1          2    15647311      Hill          608     Spain  Female   41   \n",
-       "2          3    15619304      Onio          502    France  Female   42   \n",
-       "3          4    15701354      Boni          699    France  Female   39   \n",
-       "4          5    15737888  Mitchell          850     Spain  Female   43   \n",
-       "\n",
-       "   Tenure    Balance  NumOfProducts  HasCrCard  IsActiveMember  \\\n",
-       "0       2       0.00              1          1               1   \n",
-       "1       1   83807.86              1          0               1   \n",
-       "2       8  159660.80              3          1               0   \n",
-       "3       1       0.00              2          0               0   \n",
-       "4       2  125510.82              1          1               1   \n",
-       "\n",
-       "   EstimatedSalary  Exited  Complain  Satisfaction Score Card Type  \\\n",
-       "0        101348.88       1         1                   2   DIAMOND   \n",
-       "1        112542.58       0         1                   3   DIAMOND   \n",
-       "2        113931.57       1         1                   3   DIAMOND   \n",
-       "3         93826.63       0         0                   5      GOLD   \n",
-       "4         79084.10       0         0                   5      GOLD   \n",
-       "\n",
-       "   Point Earned  \n",
-       "0           464  \n",
-       "1           456  \n",
-       "2           377  \n",
-       "3           350  \n",
-       "4           425  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Load the dataset\n",
-    "Customer_Churn = pd.read_csv(r\"D:\\Bank_Churn_Project\\data\\Customer-Churn-Records.csv\")\n",
-    "Customer_Churn.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "5c7dafb4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10000, 18)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Customer_Churn.shape"
+    "## 2. Data Collection and Understanding"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2969c8ea",
+   "id": "fa789d83",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.set_option('display.max_columns',None)\n",
-    "# To display all columns in the dataframe.\n",
-    "# If we got hide some columns due to large number of columns."
+    "# Load the dataset\n",
+    "Customer_Churn = pd.read_csv(r\"D:\\Bank_Churn_Project\\data\\Customer-Churn-Records.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "d788cbb8",
+   "execution_count": 7,
+   "id": "81a4ab68",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Index(['RowNumber', 'CustomerId', 'Surname', 'CreditScore', 'Geography',\n",
-       "       'Gender', 'Age', 'Tenure', 'Balance', 'NumOfProducts', 'HasCrCard',\n",
-       "       'IsActiveMember', 'EstimatedSalary', 'Exited', 'Complain',\n",
-       "       'Satisfaction Score', 'Card Type', 'Point Earned'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   RowNumber  CustomerId   Surname  CreditScore Geography  Gender  Age  \\\n",
+      "0          1    15634602  Hargrave          619    France  Female   42   \n",
+      "1          2    15647311      Hill          608     Spain  Female   41   \n",
+      "2          3    15619304      Onio          502    France  Female   42   \n",
+      "3          4    15701354      Boni          699    France  Female   39   \n",
+      "4          5    15737888  Mitchell          850     Spain  Female   43   \n",
+      "\n",
+      "   Tenure    Balance  NumOfProducts  HasCrCard  IsActiveMember  \\\n",
+      "0       2       0.00              1          1               1   \n",
+      "1       1   83807.86              1          0               1   \n",
+      "2       8  159660.80              3          1               0   \n",
+      "3       1       0.00              2          0               0   \n",
+      "4       2  125510.82              1          1               1   \n",
+      "\n",
+      "   EstimatedSalary  Exited  Complain  Satisfaction Score Card Type  \\\n",
+      "0        101348.88       1         1                   2   DIAMOND   \n",
+      "1        112542.58       0         1                   3   DIAMOND   \n",
+      "2        113931.57       1         1                   3   DIAMOND   \n",
+      "3         93826.63       0         0                   5      GOLD   \n",
+      "4         79084.10       0         0                   5      GOLD   \n",
+      "\n",
+      "   Point Earned  \n",
+      "0           464  \n",
+      "1           456  \n",
+      "2           377  \n",
+      "3           350  \n",
+      "4           425  \n"
+     ]
     }
    ],
    "source": [
-    "Customer_Churn.columns"
+    "# Show first 5 rows\n",
+    "print(Customer_Churn.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "08f1a7fb",
+   "execution_count": 8,
+   "id": "83cba0e7",
    "metadata": {},
    "outputs": [
     {
@@ -328,53 +128,156 @@
       " 16  Card Type           10000 non-null  object \n",
       " 17  Point Earned        10000 non-null  int64  \n",
       "dtypes: float64(2), int64(12), object(4)\n",
-      "memory usage: 1.4+ MB\n"
+      "memory usage: 1.4+ MB\n",
+      "None\n"
      ]
     }
    ],
    "source": [
-    "# Dataset info\n",
-    "Customer_Churn.info()"
+    "# Basic info\n",
+    "print(Customer_Churn.info())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9aceceb0",
+   "execution_count": 9,
+   "id": "d48eee56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RowNumber             0\n",
+      "CustomerId            0\n",
+      "Surname               0\n",
+      "CreditScore           0\n",
+      "Geography             0\n",
+      "Gender                0\n",
+      "Age                   0\n",
+      "Tenure                0\n",
+      "Balance               0\n",
+      "NumOfProducts         0\n",
+      "HasCrCard             0\n",
+      "IsActiveMember        0\n",
+      "EstimatedSalary       0\n",
+      "Exited                0\n",
+      "Complain              0\n",
+      "Satisfaction Score    0\n",
+      "Card Type             0\n",
+      "Point Earned          0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Missing values in the dataset\n",
+    "print(Customer_Churn.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5c7dafb4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RowNumber             0\n",
-       "CustomerId            0\n",
-       "Surname               0\n",
-       "CreditScore           0\n",
-       "Geography             0\n",
-       "Gender                0\n",
-       "Age                   0\n",
-       "Tenure                0\n",
-       "Balance               0\n",
-       "NumOfProducts         0\n",
-       "HasCrCard             0\n",
-       "IsActiveMember        0\n",
-       "EstimatedSalary       0\n",
-       "Exited                0\n",
-       "Complain              0\n",
-       "Satisfaction Score    0\n",
-       "Card Type             0\n",
-       "Point Earned          0\n",
-       "dtype: int64"
+       "(10000, 18)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Missing values in the dataset\n",
-    "Customer_Churn.isnull().sum()"
+    "# Check the shape of the dataset\n",
+    "Customer_Churn.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d788cbb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['RowNumber', 'CustomerId', 'Surname', 'CreditScore', 'Geography',\n",
+       "       'Gender', 'Age', 'Tenure', 'Balance', 'NumOfProducts', 'HasCrCard',\n",
+       "       'IsActiveMember', 'EstimatedSalary', 'Exited', 'Complain',\n",
+       "       'Satisfaction Score', 'Card Type', 'Point Earned'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check columns\n",
+    "Customer_Churn.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9aceceb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         RowNumber    CustomerId   CreditScore           Age        Tenure  \\\n",
+      "count  10000.00000  1.000000e+04  10000.000000  10000.000000  10000.000000   \n",
+      "mean    5000.50000  1.569094e+07    650.528800     38.921800      5.012800   \n",
+      "std     2886.89568  7.193619e+04     96.653299     10.487806      2.892174   \n",
+      "min        1.00000  1.556570e+07    350.000000     18.000000      0.000000   \n",
+      "25%     2500.75000  1.562853e+07    584.000000     32.000000      3.000000   \n",
+      "50%     5000.50000  1.569074e+07    652.000000     37.000000      5.000000   \n",
+      "75%     7500.25000  1.575323e+07    718.000000     44.000000      7.000000   \n",
+      "max    10000.00000  1.581569e+07    850.000000     92.000000     10.000000   \n",
+      "\n",
+      "             Balance  NumOfProducts    HasCrCard  IsActiveMember  \\\n",
+      "count   10000.000000   10000.000000  10000.00000    10000.000000   \n",
+      "mean    76485.889288       1.530200      0.70550        0.515100   \n",
+      "std     62397.405202       0.581654      0.45584        0.499797   \n",
+      "min         0.000000       1.000000      0.00000        0.000000   \n",
+      "25%         0.000000       1.000000      0.00000        0.000000   \n",
+      "50%     97198.540000       1.000000      1.00000        1.000000   \n",
+      "75%    127644.240000       2.000000      1.00000        1.000000   \n",
+      "max    250898.090000       4.000000      1.00000        1.000000   \n",
+      "\n",
+      "       EstimatedSalary        Exited      Complain  Satisfaction Score  \\\n",
+      "count     10000.000000  10000.000000  10000.000000        10000.000000   \n",
+      "mean     100090.239881      0.203800      0.204400            3.013800   \n",
+      "std       57510.492818      0.402842      0.403283            1.405919   \n",
+      "min          11.580000      0.000000      0.000000            1.000000   \n",
+      "25%       51002.110000      0.000000      0.000000            2.000000   \n",
+      "50%      100193.915000      0.000000      0.000000            3.000000   \n",
+      "75%      149388.247500      0.000000      0.000000            4.000000   \n",
+      "max      199992.480000      1.000000      1.000000            5.000000   \n",
+      "\n",
+      "       Point Earned  \n",
+      "count  10000.000000  \n",
+      "mean     606.515100  \n",
+      "std      225.924839  \n",
+      "min      119.000000  \n",
+      "25%      410.000000  \n",
+      "50%      605.000000  \n",
+      "75%      801.000000  \n",
+      "max     1000.000000  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Statistical summary\n",
+    "print(Customer_Churn.describe())"
    ]
   },
   {
