Step 2: Data Collection & Initial Exploration

--- a/notebooks/01_Data_Understanding.ipynb
+++ b/notebooks/01_Data_Understanding.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e9561fb6",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "fa789d83",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "81a4ab68",
    "metadata": {},
    "outputs": [
@@ -95,8 +95,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c06bdc90",
+   "metadata": {},
+   "source": [
+    "Observations:\n",
+    "- Dataset has 10,000 rows and 18 columns.\n",
+    "- Includes demographic, account, and customer feedback features."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "83cba0e7",
    "metadata": {},
    "outputs": [
@@ -139,8 +149,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b3eda26c",
+   "metadata": {},
+   "source": [
+    "Observations:\n",
+    "- No missing values in any columns.\n",
+    "- 12 numeric columns, 4 object (categorical) columns: 'Surname', 'Geography', 'Gender', 'Card Type'.\n",
+    "- Target variable is 'Exited'."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "d48eee56",
    "metadata": {},
    "outputs": [
@@ -171,61 +192,48 @@
     }
    ],
    "source": [
-    "# Missing values in the dataset\n",
+    "# Check Missing Values\n",
     "print(Customer_Churn.isnull().sum())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "5c7dafb4",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(10000, 18)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10000, 18)\n",
+      "Index(['RowNumber', 'CustomerId', 'Surname', 'CreditScore', 'Geography',\n",
+      "       'Gender', 'Age', 'Tenure', 'Balance', 'NumOfProducts', 'HasCrCard',\n",
+      "       'IsActiveMember', 'EstimatedSalary', 'Exited', 'Complain',\n",
+      "       'Satisfaction Score', 'Card Type', 'Point Earned'],\n",
+      "      dtype='object')\n"
+     ]
     }
    ],
    "source": [
     "# Check the shape of the dataset\n",
-    "Customer_Churn.shape"
+    "print(Customer_Churn.shape)\n",
+    "print(Customer_Churn.columns)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "d788cbb8",
+   "cell_type": "markdown",
+   "id": "c55970a8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['RowNumber', 'CustomerId', 'Surname', 'CreditScore', 'Geography',\n",
-       "       'Gender', 'Age', 'Tenure', 'Balance', 'NumOfProducts', 'HasCrCard',\n",
-       "       'IsActiveMember', 'EstimatedSalary', 'Exited', 'Complain',\n",
-       "       'Satisfaction Score', 'Card Type', 'Point Earned'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# Check columns\n",
-    "Customer_Churn.columns"
+    "Observations:\n",
+    "- Shape confirms 10000 rows and 18 columns.\n",
+    "- Columns like 'RowNumber', 'CustomerId', 'Surname' are not useful for prediction."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "9aceceb0",
    "metadata": {},
    "outputs": [
@@ -278,6 +286,26 @@
    "source": [
     "# Statistical summary\n",
     "print(Customer_Churn.describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b1a7c48",
+   "metadata": {},
+   "source": [
+    "Observations:\n",
+    "- CreditScore: 350–850, mean ~650\n",
+    "- Age: 18–92, mean ~39\n",
+    "- Tenure: 0–10 years, mean ~5\n",
+    "- Balance: 0–250,898\n",
+    "- NumOfProducts: mostly 1, max 4\n",
+    "- HasCrCard: ~70% have credit card\n",
+    "- IsActiveMember: ~51% active\n",
+    "- EstimatedSalary: 11–199,992\n",
+    "- Exited: ~20% churn rate\n",
+    "- Satisfaction Score: 1–5\n",
+    "- Points Earned: 119–1000\n",
+    "- Dataset is clean and ready for preprocessing"
    ]
   },
   {
