--- a/notebooks/01_Data_Understanding.ipynb
+++ b/notebooks/01_Data_Understanding.ipynb
@@ -929,6 +929,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7528cef0",
+   "metadata": {},
+   "source": [
+    "Key Insights\n",
+    "Churned customers (Exited=1) appear to be slightly older than non-churned customers, as indicated by the age distribution.\n",
+    "\n",
+    "Most churned customers have high account balances, suggesting that customers with more funds are leaving more often.\n",
+    "\n",
+    "No clear pattern is evident between churn and features like credit score, tenure, estimated salary, point earned, or satisfaction score; distributions overlap for both churned and retained customers.\n",
+    "\n",
+    "Features like NumOfProducts and IsActiveMember are discrete and show scattered clusters but no obvious separation between churn and non-churn.\n",
+    "\n",
+    "Most features are not strongly linearly separated with respect to the churn status, indicating a nonlinear classifier may be more effective."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7e33aeb8",
    "metadata": {},
    "source": [
@@ -960,6 +977,20 @@
     "plt.title('Feature Correlation')\n",
     "plt.savefig('../plots/correlation_heatmap.png')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5b84d2e",
+   "metadata": {},
+   "source": [
+    "Most features have weak correlations with each other and with churn.\n",
+    "\n",
+    "Age shows the strongest link to customer churn and complaints.\n",
+    "\n",
+    "Active members are less likely to churn or complain.\n",
+    "\n",
+    "No multicollinearity problem among features."
    ]
   },
   {
