--- a/notebooks/02_Data_Visualization.ipynb
+++ b/notebooks/02_Data_Visualization.ipynb
@@ -436,8 +436,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "53a94991",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clean dataset saved to ../data/cleaned_data.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save cleaned dataset\n",
+    "cleaned_path = \"../data/cleaned_data.csv\"\n",
+    "Customer_Churn.to_csv(cleaned_path, index=False)\n",
+    "print(f\"Clean dataset saved to {cleaned_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95463c0e",
    "metadata": {},
    "outputs": [],
    "source": []
